@@ -126,3 +126,7 @@ int RCS_lock PROTO ((RCSNode *, const char *, int));
 int RCS_unlock PROTO ((RCSNode *, const char *, int));
 int rcs_change_text PROTO ((const char *, char *, size_t, const char *,
 			    size_t, char **, size_t *));
+
+/* From import.c.  */
+extern int add_rcs_file PROTO ((char *, char *, char *, char *,
+				char *, char *, int, char **, FILE *));
